fix: opencypher statement.isReadOnly() didn't check for SET expressions
Fixed issue #3325

(cherry picked from commit 684adbf4aa903a28d06b3e08ded409a9728fda59)